--- a/数据结构/4. 字典.md
+++ b/数据结构/4. 字典.md
@@ -83,7 +83,7 @@ typedef struct dictEntry { //Hash表节点, 结构大小: 24字节
 ### 3. 基本操作
 
 ```c
-// dict.c 中定义的一些工具函数
+// dict.c 中的一些宏定义
 #define dictIsRehashing(d) ((d)->rehashidx != -1) //当前字典是否在进行rehash操作;
 
 #define dictSlots(d) ((d)->ht[0].size+(d)->ht[1].size) //字典中的Hash表数组长度之和;
@@ -96,6 +96,14 @@ typedef struct dictEntry { //Hash表节点, 结构大小: 24字节
 #define dictGetSignedIntegerVal(he) ((he)->v.s64)
 #define dictGetUnsignedIntegerVal(he) ((he)->v.u64)
 #define dictGetDoubleVal(he) ((he)->v.d)
+
+// dict.c 中定义的只用于本文中调用的函数
+static int _dictExpandIfNeeded(dict *ht); //检查是否需要扩容, 如果需要, 则执行扩容
+static unsigned long _dictNextPower(unsigned long size); //不小于size的最小2的n次方数
+
+//计算key应该添加到字典的索引值; 但如果key已存在的话, 会返回-1; 如果在rehashing中, 则返回在ht[1]中的索引值
+static long _dictKeyIndex(dict *ht, const void *key, uint64_t hash, dictEntry **existing);
+static int _dictInit(dict *ht, dictType *type, void *privDataPtr); //初始化字典, 其中的ht[]内容均置0
 ```
 
 
@@ -139,7 +147,7 @@ static void _dictReset(dictht *ht)
 
 
 
-#### 3.2 添加元素
+#### 3.2 添加或替换元素
 
 > redis-server启动后，启动redis-cli连接之后，执行命令 “set k1 v1”; 
 >
@@ -148,20 +156,20 @@ static void _dictReset(dictht *ht)
 > + 调用dictFind函数，查询键是否存在，是则调用 dbOverwrite 函数修改键值对，否则调用 dbAdd 函数添加；
 > + dbAdd 最终调用 dict.h 中的 dictAdd函数插入键值对；
 >
-> 所以这里主要介绍 dictAdd 函数;
+> 所以这里主要介绍 dictAdd 函数
 
 ```C
 //dict.c
-/* Add an element to the target hash table */
-int dictAdd(dict *d, void *key, void *val){
+int dictAdd(dict *d, void *key, void *val){ //添加元素
     dictEntry *entry = dictAddRaw(d,key,NULL); //重要调用的函数
 
-    if (!entry) return DICT_ERR;
+    if (!entry) return DICT_ERR; //字典中已包含key, 返回错误;
     dictSetVal(d, entry, val); //更新entry对应的值; 这里同样需要注意dict.type.valDup函数的影响;
     return DICT_OK;
 }
 
-
+//工具函数, 如果字典中不包含key, 创建新 dictEntry* 后返回;
+//但如果字典中已包含了key, 则会返回NULL; 
 dictEntry *dictAddRaw(dict *d, void *key, dictEntry **existing)
 {
     long index;
@@ -171,7 +179,7 @@ dictEntry *dictAddRaw(dict *d, void *key, dictEntry **existing)
     //检查 d->rehashidx 值是否为 -1; 目的是检查是否在进行rehash操作, 是则执行一次rehash
     if (dictIsRehashing(d)) _dictRehashStep(d); //关于rehash相关的操作, 都在下面进行说明
 
-    // _dictKeyIndex函数, 查找键, 找到则直接返回 -1, 并把老节点存入existing字段;
+    // _dictKeyIndex函数, 查找键, 找到则直接返回 -1, 并且如果existing非null, 也把老节点存入existing字段;
     // 否则把新节点的索引值返回; 如果遇到Hash表容量不足, 则进行扩容; 
     // dictHashKey 函数见第3节开头工具函数说明
     if ((index = _dictKeyIndex(d, key, dictHashKey(d,key), existing)) == -1)
@@ -195,7 +203,9 @@ dictEntry *dictAddRaw(dict *d, void *key, dictEntry **existing)
 
 /*
 选择key需要放到的散列表索引处, 若找到, 则返回对应的index值; 
-若在字典中已存在key这个键值, 则返回 -1; 并且在这种情况下, 如果existing不为NULL, 则将它指向对应的dictEntry; 
+若在字典中已存在key这个键值, 则返回 -1; 并且在这种情况下, 如果existing不为NULL, 则将它指向对应的dictEntry指针; 
+
+需要注意的是, 如果在本函数执行过程中, 字典处于rehashing状态的话, 返回的index一般都是属于ht[1]中的索引;
 */
 static long _dictKeyIndex(dict *d, const void *key, uint64_t hash, dictEntry **existing)
 {
@@ -243,9 +253,11 @@ static long _dictKeyIndex(dict *d, const void *key, uint64_t hash, dictEntry **e
 ```c
 // dict.c
 /*
+检测是否需要初始化或扩容新hashtable, 如果是, 则调用dictExpand()函数进行扩容
 扩容的主要流程: 
-1. 申请一块内存, 初次申请时默认容量大小为4个dictEntry; 非初次申请时, 申请内存大小为当前hash表容量的一倍; 
-2. 新申请的内存地址赋值为ht[1],并把字典的rehashidx标识由 -1改为0,表示之后需要进行rehash操作; 
+1. 如果未被初始化过, ht[0].size为0, 则为ht[0].table分配空间, 初始默认table size为4;
+	如果曾经初始化过, 即ht[0].size不为0, 则为ht[1].table分配空间, ht[1].table size为ht[0].size * 2; 
+2. 若为新申请的内存地址赋值为ht[1],并把字典的rehashidx标识由 -1改为0,表示之后需要进行rehash操作; 
 */
 static int _dictExpandIfNeeded(dict *d)
 {
@@ -382,6 +394,60 @@ int dictRehash(dict *d, int n) {
     
     return 1; //返回1表示还未全部完成rehash过程
 }
+
+//---- dictRehashMilliseconds() 在ms参数限制时间内, 执行渐近式rehash;
+long long timeInMilliseconds(void) {
+    struct timeval tv;
+
+    gettimeofday(&tv,NULL);
+    return (((long long)tv.tv_sec)*1000)+(tv.tv_usec/1000);
+}
+
+/* Rehash for an amount of time between ms milliseconds and ms+1 milliseconds */
+int dictRehashMilliseconds(dict *d, int ms) {
+    long long start = timeInMilliseconds();
+    int rehashes = 0;
+
+    while(dictRehash(d,100)) {
+        rehashes += 100;
+        if (timeInMilliseconds()-start > ms) break;
+    }
+    return rehashes;
+}
+```
+
+
+
+##### 3.2.3 添加或替换
+
+```c
+int dictReplace(dict *d, void *key, void *val)
+{
+    dictEntry *entry, *existing, auxentry;
+
+    /* Try to add the element. If the key does not exists dictAdd will succeed. */
+    entry = dictAddRaw(d,key,&existing);
+    if (entry) {
+        dictSetVal(d, entry, val);
+        return 1;
+    }
+
+    /* Set the new value and free the old one. Note that it is important
+     * to do that in this order, as the value may just be exactly the same
+     * as the previous one. In this context, think to reference counting,
+     * you want to increment (set), and then decrement (free), and not the
+     * reverse. */
+    auxentry = *existing;
+    dictSetVal(d, existing, val);
+    dictFreeVal(d, &auxentry);
+    return 0;
+}
+
+dictEntry *dictAddOrFind(dict *d, void *key) { //添加或查找; 返回新添加的entry或者已存在的entry
+    dictEntry *entry, *existing;
+    entry = dictAddRaw(d,key,&existing);
+    return entry ? entry : existing;
+}
 ```
 
 
@@ -415,7 +481,7 @@ dictEntry *dictFind(dict *d, const void *key)
 
 
 
-#### 3.2 修改元素
+#### 3.4 修改元素
 
 ```c
 //db.c
@@ -444,7 +510,7 @@ void dbOverwrite(redisDb *db, robj *key, robj *val) {
 
 
 
-#### 3.3 删除元素
+#### 3.5 删除元素
 
 ```c
 // dict.c
@@ -452,6 +518,7 @@ int dictDelete(dict *ht, const void *key) {
     return dictGenericDelete(ht,key,0) ? DICT_OK : DICT_ERR;
 }
 
+//内部用于删除key对应的Entry的函数, nofree参数用于标识是否保留找到的Entry的空间, 如果为false, 则会释放entry空间
 static dictEntry *dictGenericDelete(dict *d, const void *key, int nofree) {
     uint64_t h, idx;
     dictEntry *he, *prevHe;
@@ -488,15 +555,29 @@ static dictEntry *dictGenericDelete(dict *d, const void *key, int nofree) {
     }
     return NULL;
 }
+
+//--- 从字典链表中移除key对应的entry, 但不释放该entry对应的空间; 可以在后面调用dictFreeUnlinkedEntry来手动释放
+dictEntry *dictUnlink(dict *ht, const void *key) {
+    return dictGenericDelete(ht,key,1);
+}
+
+void dictFreeUnlinkedEntry(dict *d, dictEntry *he) {
+    if (he == NULL) return;
+    dictFreeKey(d, he);
+    dictFreeVal(d, he);
+    zfree(he);
+}
 ```
 
 
 
-##### 3.3.1 字典缩容
+#### 3.6 字典缩容
 
 > 在字典经过一系列操作后, 使用量不到总空间<10%时, 就会进行缩容操作;
 >
-> 字典缩容的核心函数有两个:  **tryResizeHashTables & dictResize;**
+> 字典缩容的核心函数有两个:  **tryResizeHashTables & dictResize**
+>
+> **缩容同样是通过 dictExpand() 函数实现，只是传入的size参数是比 ht[0].size 更小的值**
 
 ```c
 //server.c
@@ -530,7 +611,7 @@ int dictResize(dict *d) {
 
 
 
-#### 3.4 字典遍历
+#### 3.7 字典遍历
 
 > 字典遍历的原则为: 1. 不重复出现数据; 2. 不遗漏任何数据; 
 >
@@ -540,19 +621,17 @@ int dictResize(dict *d) {
 >
 > 间断遍历: 每次命令执行只取部分数据, 分多次遍历;
 
+##### 3.7.1迭代器遍历 (迭代器遍历就属于全遍历)
 
-
-##### 3.4.1 迭代器遍历 (迭代器遍历就属于全遍历)
-
-> 迭代器遍历时需要解决一个问题: **在迭代过程中, 如果发生数据增删, 可能导致rehash操作; 或者迭代开始时字典就在执行rehash操作; 会出现一条数据被多次遍历到;**
+> 迭代器遍历时需要解决一个问题：**在迭代过程中，如果发生数据增删，可能导致rehash操作；或者迭代开始时字典就在执行rehash操作， 会出现一条数据被多次遍历到；**
 >
-> 需要解释的是, 由于Redis是单进程单线程模式, 不存在两个命令同时执行的情况;  因此上面说的**在迭代命令执行过程的同时删除了数据, 才会触发上面的问题;**
+> 需要解释的是， 由于Redis是单进程单线程模式， 不存在两个命令同时执行的情况；  因此上面说的**在迭代命令执行过程的同时删除了数据, 才会触发上面的问题；**
 >
 > 根据迭代器遍历数据, 将迭代器分为两类: 
 >
-> **普通迭代器: 只遍历数据;**
+> **普通迭代器： 只遍历数据**
 >
-> **安全迭代器: 遍历的同时可删除数据;**
+> **安全迭代器：遍历的同时可删除数据;**
 
 ```c
 // dict.h
@@ -577,11 +656,11 @@ void dictReleaseIterator(dictIterator *iter);
 
 
 
-###### 3.4.1.1 普通迭代器
+##### 3.7.2 普通迭代器
 
 > 普通迭代器在遍历字典时, **会对迭代器中 fingerprint 字段的值作严格校验**, 以保证迭代过程中字典数据未发生变化;
 >
-> Redis 执行部分命令时会使用普通迭代器, 如sort命令;  sort命令主要作用是对给定表表、集合、有序集合的元素进行排序, 如果给定的是有序集合， 其成员名存储用的是字典, 分值存储用的是跳跃表, 则执行sort命令读取数据的时候会用到迭代器来遍历整个字典; 
+> Redis 执行部分命令时会使用普通迭代器, 如sort命令； sort命令主要作用是对给定表表、集合、有序集合的元素进行排序, 如果给定的是有序集合， 其成员名存储用的是字典； 分值存储用的是跳跃表, 则执行sort命令读取数据的时候会用到迭代器来遍历整个字典; 
 >
 > 普通迭代器过程: 
 >
@@ -589,17 +668,106 @@ void dictReleaseIterator(dictIterator *iter);
 > 2. **循环调用 dictNext 函数依次遍历字典中Hash表的节点, 首次遍历时会通过 dictFingerprint函数拿到当前字典的指纹值;**
 > 3. **当调用dictNext函数遍历完字典Hash表节点数据后, 释放迭代器时会继续调用 dictFingerprint函数计算指纹值, 并与首次拿到的指纹值比较, 不相等则输出异常 "=== ASSERTION FAILED ===", 并退出程序执行;**
 >
-> 
->
 > > **通过步骤2、3的指纹值比较, 来限制整个迭代过程中只能进行迭代操作, 即迭代过程中字典数据的修改、添加、删除、查找等操作都不能进行, 只能调用dictNext函数迭代整个字典, 否则就报异常;**
-> >
+>>
 > > **对字典进行修改、添加、删除、查找操作都会调用dictRehashStep函数, 进行渐近式rehash操作, 从而导致fingerprint值发生改变;**
 
 <img src="./dict_normal_iter.png" alt="普通迭代器" style="zoom:150%;" />
 
+```c
+//dict.c
+//--- 普通迭代器
+
+long long dictFingerprint(dict *d) { //计算字典对应的fingerprint
+    long long integers[6], hash = 0;
+    int j;
+
+    integers[0] = (long) d->ht[0].table;
+    integers[1] = d->ht[0].size;
+    integers[2] = d->ht[0].used;
+    integers[3] = (long) d->ht[1].table;
+    integers[4] = d->ht[1].size;
+    integers[5] = d->ht[1].used;
+
+    for (j = 0; j < 6; j++) {
+        hash += integers[j];
+        /* For the hashing step we use Tomas Wang's 64 bit integer hash. */
+        hash = (~hash) + (hash << 21); // hash = (hash << 21) - hash - 1;
+        hash = hash ^ (hash >> 24);
+        hash = (hash + (hash << 3)) + (hash << 8); // hash * 265
+        hash = hash ^ (hash >> 14);
+        hash = (hash + (hash << 2)) + (hash << 4); // hash * 21
+        hash = hash ^ (hash >> 28);
+        hash = hash + (hash << 31);
+    }
+    return hash;
+}
+
+dictIterator *dictGetIterator(dict *d) //获取普通迭代器
+{
+    dictIterator *iter = zmalloc(sizeof(*iter));
+
+    iter->d = d;
+    iter->table = 0;
+    iter->index = -1;
+    iter->safe = 0;
+    iter->entry = NULL;
+    iter->nextEntry = NULL;
+    return iter;
+}
+
+//每次调用dictNext, 都会从字典中获取下一个entry并赋值给iter->entry字段;
+dictEntry *dictNext(dictIterator *iter) 
+{
+    while (1) {
+        if (iter->entry == NULL) {
+            dictht *ht = &iter->d->ht[iter->table];
+            if (iter->index == -1 && iter->table == 0) {
+                if (iter->safe)
+                    iter->d->iterators++; //对于安全迭代器, 更新字典的iterators字段, 以防止rehash
+                else
+                    iter->fingerprint = dictFingerprint(iter->d); //首次迭代, 计算fingerprint
+            }
+            iter->index++;
+            if (iter->index >= (long) ht->size) {
+                if (dictIsRehashing(iter->d) && iter->table == 0) {
+                    iter->table++;
+                    iter->index = 0;
+                    ht = &iter->d->ht[1];
+                } else {
+                    break;
+                }
+            }
+            iter->entry = ht->table[iter->index];
+        } else {
+            iter->entry = iter->nextEntry;
+        }
+        if (iter->entry) {
+            /* We need to save the 'next' here, the iterator user
+             * may delete the entry we are returning. */
+            iter->nextEntry = iter->entry->next;
+            return iter->entry;
+        }
+    }
+    return NULL;
+}
+
+// 迭代完成, 对于普通迭代器, 会重新计算fingerprint后与迭代开始时的fingerprint对比, 如果不同, 则报错
+void dictReleaseIterator(dictIterator *iter) 
+{
+    if (!(iter->index == -1 && iter->table == 0)) {
+        if (iter->safe)
+            iter->d->iterators--;
+        else
+            assert(iter->fingerprint == dictFingerprint(iter->d));
+    }
+    zfree(iter);
+}
+```
 
 
-###### 3.4.1.2 安全迭代器
+
+##### 3.7.3 安全迭代器
 
 > 安全迭代器原理与普通迭代器类似, 也是通过循环调用dictNext函数依次遍历字典中的Hash表节点;
 >
@@ -624,11 +792,20 @@ void dictReleaseIterator(dictIterator *iter);
 > 2. **循环调用 dictNext 函数依次遍历字典中Hash表节点, 首次遍历时会把字典中 iterators 字段进行 "加1" 操作, 确保迭代过程中渐近式 rehash操作会被中断执行; **
 > 3. **迭代完成后, 释放迭代器时会把字典中 iterators 字段进行 "减1"操作;**
 
-> **整个 3.4.1节 的相关源码之后再进行说明;**
+```c
+dictIterator *dictGetSafeIterator(dict *d) {
+    dictIterator *i = dictGetIterator(d);
+
+    i->safe = 1;
+    return i;
+}
+
+//其它逻辑参考上面的 dictNext 和 dictReleaseIterator 函数逻辑
+```
 
 
 
-##### 3.4.2 间断遍历
+##### 3.7.4 间断遍历 （还需要整理）
 
 > 全遍历的问题: 当数据库中数据量很大时, 执行keys命令进行一次数据库遍历, 耗时太长, 会造成Redis短暂不可用;
 >
@@ -637,9 +814,36 @@ void dictReleaseIterator(dictIterator *iter);
 > **可用的scan命令, 如: hscan命令迭代整个数据库中的key; zscan命令迭代有序集合所有成员与值;**
 >
 > **此外, 需要注意的是 dictScan遍历字典过程中是可以进行 rehash 操作的;**
+>
+> > 关于dictScan，参考: http://www.langdebuqing.com/redis%20notebook/redis%E6%BA%90%E7%A0%81%E9%9A%BE%E7%82%B9%EF%BC%9A%E5%AD%97%E5%85%B8%E7%9A%84%E9%81%8D%E5%8E%86dictScan.html
 
 ```c
 // dict.c
+
+//工具函数, 算法来自 http://graphics.stanford.edu/~seander/bithacks.html#ReverseParallel
+static unsigned long rev(unsigned long v) {
+    unsigned long s = 8 * sizeof(v); // bit size; must be power of 2
+    unsigned long mask = ~0;
+    while ((s >>= 1) > 0) {
+        mask ^= (mask << s);
+        v = ((v >> s) & mask) | ((v << s) & ~mask);
+    }
+    return v;
+}
+
+/*
+原英文注释解释的比较详细, 以下为部分摘录:
+1) 开始时调用本函数, 游标值v值为0
+2) 函数执行一次迭代, 并且返回新游标值, 这个值需要作为下次调用dictScan函数时的参数传入
+3) 当dictScan返回值为0时, 表示迭代完成
+
+dictScan保证字典中的所有entry都会被迭代到, 但是却可能出现某些entry被迭代多次;
+
+每次迭代到entry, 都会调用回调参数 fn(privdata, entry) 进行处理;
+
+工作原理: 
+迭代算法由 Pieter Noordhuis 设计;  中心思想是increment a cursor starting from the higher order bits; That is, instead of incrementing the cursor normally, the bits of the cursor are reversed, then the cursor is incremented, and finally the bits are reversed again;
+*/
 /*
 参数说明:
 d: 当前字典; v: 标识迭代开始的游标(即Hash表中数组索引), 每次遍历后会返加新的游标值; 
@@ -721,22 +925,11 @@ unsigned long dictScan(dict *d,unsigned long v,dictScanFunction *fn,
 
     return v;
 }
-
-//工具函数 rev
-static unsigned long rev(unsigned long v) {
-    unsigned long s = 8 * sizeof(v); // bit size; must be power of 2
-    unsigned long mask = ~0;
-    while ((s >>= 1) > 0) {
-        mask ^= (mask << s);
-        v = ((v >> s) & mask) | ((v << s) & ~mask);
-    }
-    return v;
-}
 ```
 
 
 
-###### 3.4.2.1 示例
+###### 3.7.4.1 dictScan应用示例 
 
 > 以 hscan 命令为例, 它会依次调用  **t_hash.c#hscanCommand -> db.c#scanGenericCommand 函数**
 >
