--- a/数据结构/2. 跳跃表.md
+++ b/数据结构/2. 跳跃表.md
@@ -18,7 +18,7 @@
 
 #### 2.1 有序链表
 
-  <img src="./link_list.png" alt="有序链表" style="zoom:50%;" />
+  <img src="../assets/link_list.png" alt="有序链表" style="zoom:50%;" />
 
 > 如上图所示： 一般有序链表查询时间复杂度为 O(N)，而修改操作基本不消耗时间；
 
@@ -26,7 +26,7 @@
 
 #### 2.2 跳跃表
 
-<img src="./zset.png" alt="跳表" style="zoom:50%;" />
+<img src="../assets/zset.png" alt="跳表" style="zoom:50%;" />
 
 在跳表中查找值为31的节点，步骤如下:
 
@@ -49,7 +49,7 @@
 
 #### 3.1 性质
 
-<img src="./zskiplist.png" alt="Redis跳跃表" style="zoom:150%;" />
+<img src="../assets/zskiplist.png" alt="Redis跳跃表" style="zoom:150%;" />
 
 从上图中可以看到跳跃表有如下性质：
 
@@ -282,7 +282,7 @@ zskiplistNode *zslInsert(zskiplist *zsl, double score, sds ele) {
 
 ###### 3.3.3.1 查找要插入的位置
 
-![跳跃表查找插入位置](./zskiplist_search.png)
+![跳跃表查找插入位置](../assets/zskiplist_search.png)
 
 + 从zskiplist zsl中保存的最高层开始(上面level值为3, 以对应header.level[2]开始)，按红线确定最高层的要插入节点的位置（上面是 score=21 节点）后；
 + 从该节点开始向下走, 找到下面一层的要插入节点（这里L1 处的节点也是 score=21处）;
@@ -329,7 +329,7 @@ zskiplistNode *zslInsert(zskiplist *zsl, double score, sds ele) {
 
 + 关于 rank[0]、rank[N]、update[i]->level[i].span 之间的关系如下图:
 
-  ![span_n](./span_N.png)
+  ![span_n](../assets/span_N.png)
 
 + 根据上图关系, 如果新添加一个节点到 竖蓝线 处，那么对于 Level N层的 update[N].level[N].span的值应该修改为:  **(rank[0] - rank[i] + 1);  +1表示新添加的节点**； 而新添加节点的Level N层的span值为: **update[N]->level[N].span- (rank[0] - rank[N])**
 
