--- a/数据结构/4. 字典.md
+++ b/数据结构/4. 字典.md
@@ -27,7 +27,7 @@ static unsigned in dictGenHashFunction(const unsigned char *buf, int len) {
 
 ### 2. Redis字典的数据结构
 
-<img src="./dict.png" alt="字典结构" style="zoom:80%;" />
+<img src="../assets/dict.png" alt="字典结构" style="zoom:80%;" />
 
 #### 2.1 相关结构定义
 
@@ -143,7 +143,7 @@ static void _dictReset(dictht *ht)
 
 初始化之后的状态:
 
-<img src="./dict_tmp1.png" alt="dict_tmp1" style="zoom:50%;" />
+<img src="../assets/dict_tmp1.png" alt="dict_tmp1" style="zoom:50%;" />
 
 
 
