--- a/数据结构/6. quicklist.md
+++ b/数据结构/6. quicklist.md
@@ -80,7 +80,7 @@ typedef struct quicklistIter {
 } quicklistIter;
 ```
 
-<img src="./quicklist.png" alt="快速链表quicklist" style="zoom:80%;" />
+<img src="../assets/quicklist.png" alt="快速链表quicklist" style="zoom:80%;" />
 
 
 
@@ -90,7 +90,7 @@ typedef struct quicklistIter {
 >
 > 压缩过后的数据可以分成多个片段, 每个片段有2部分: 一部分是解释字段, 另一部分是存放具体的数据字段; 结构如下:
 >
-> <img src="./quicklistLZF.png" alt="ziplist压缩结果" style="zoom:67%;" />
+> <img src="../assets/quicklistLZF.png" alt="ziplist压缩结果" style="zoom:67%;" />
 
 > 具体而言, LZF压缩的数据格式有3种, 即解释字段有3种:
 >
