--- a/数据结构/3. 压缩列表.md
+++ b/数据结构/3. 压缩列表.md
@@ -12,7 +12,7 @@
 
 ### 2. 存储结构
 
-<img src="./ziplist.png" alt="ziplist结构" style="zoom:80%;" />
+<img src="../assets/ziplist.png" alt="ziplist结构" style="zoom:80%;" />
 
 + 1. zlbytes: 压缩列表的字节长度，4字节，因此压缩列表最多有 (2的32次方 - 1) 个字节；
   2. zltail: 压缩列表尾元素相对于压缩列表起始地址的偏移量，4字节；
@@ -48,7 +48,7 @@
 
 #### 2.2 压缩列表元素编码结构
 
-![ziplist entry结构](./ziplist_entry.png)
+![ziplist entry结构](../assets/ziplist_entry.png)
 
 + 上图中的最后一行, **1111xxxx**中的'xxxx'值范围是**0~12**, 但根据下面关于函数**zipIntSize**的说明, 它的范围其实应该是**0~13;** **所以这里做一个更改；**
 
@@ -468,7 +468,7 @@ int string2ll(const char *s, size_t slen, long long *value) {
 
 > 编码即计算 previous_entry_length字段、encoding字段、content字段的内容。那么如何获取前一个元素的长度呢？此时需要根据元素的插入位置分情况讨论。
 
-![压缩列表的不同插入位置](./insert_position.png)
+![压缩列表的不同插入位置](../assets/insert_position.png)
 
 1. 当压缩列表为空、插入位置为P0时，不存在前一个元素，即前一个元素的长度为0；
 
@@ -520,7 +520,7 @@ reqlen += zipStoreEntryEncoding(NULL,encoding,slen);
 
 由于新插入了元素，压缩列表所需空间增大，因此需要重新分配存储空间。那么空间大小是不是添加元素前的压缩列表长度与新添加元素长度之和呢？并不一定。如下图:
 
-![压缩列表长度变化图](./ziplist_len_change.png)
+![压缩列表长度变化图](../assets/ziplist_len_change.png)
 
  插入元素前，entryX元素的长度为128字节， entryX+1 元素的previous_entry_length字段占1个字节； 添加元素 entryNEW, 元素长度为1024字节，此时 原entryX+1元素(即现entryX+2元素)的 previous_entry_length字段需要5字节，即压缩列表的长度不仅增加1024个字节，还要加上原 entryX+1元素扩展的4个字节。而它的长度变化由于新元素的长度不同, 可能会出现长度增加4个字节、减小4个字节、或不变等情况；
 
